--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.10.0",
     "expo": "53.0.12",
     "expo-font": "~13.3.1",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
@@ -29,6 +30,7 @@
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
     "lottie-react-native": "^7.2.2",
+    "qs": "^6.14.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
@@ -41,7 +43,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.4.0",
-    "react-native-web": "~0.20.0"
+    "react-native-web": "~0.20.0",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
